--- a/educonnectGPT.html
+++ b/educonnectGPT.html
@@ -645,6 +645,7 @@
         const sendButton = document.querySelector('.send-button');
 
         // --- API Configuration ---
+        // IMPORTANT: Use the correct endpoint for your FastAPI chat function
         const apiEndpoint = 'http://127.0.0.1:2000/chat_get-answer/';
 
         // --- Helper Functions ---
@@ -700,7 +701,11 @@
             const avatarAlt = sender === 'ai' ? 'AI Avatar' : 'User Avatar';
             const messageClass = sender === 'ai' ? 'ai' : (sender === 'user' ? 'user' : 'system'); // Add 'system' class if needed
 
-            const sanitizedText = text.replace(/</g, "<").replace(/>/g, ">"); // Basic XSS prevention
+            // 1. Basic Sanitization (Prevent basic XSS)
+            // Consider using a dedicated library like DOMPurify for robust sanitization if needed.
+            const sanitizedText = text.replace(/</g, "<").replace(/>/g, ">");
+
+            // 2. Format Newlines for HTML display
             const formattedText = sanitizedText.replace(/\n/g, '<br>');
 
             const messageHTML = `
@@ -716,7 +721,8 @@
             `;
 
             chatMessages.insertAdjacentHTML('beforeend', messageHTML);
-            chatMessages.scrollTop = chatMessages.scrollHeight; // Scroll to the bottom
+            // Scroll to the bottom to show the new message
+            chatMessages.scrollTop = chatMessages.scrollHeight;
         }
 
         // --- Main Chat Logic ---
@@ -730,90 +736,80 @@
                 return; // Don't send empty messages
             }
 
+            // Add user message to UI immediately
             addMessage(userInput, 'user');
-            textarea.value = '';
-            textarea.style.height = 'auto';
+            textarea.value = ''; // Clear input field
+            textarea.style.height = 'auto'; // Reset textarea height
 
+            // Show typing indicator while waiting
             showTypingIndicator();
 
             try {
+                // --- Call the FastAPI endpoint ---
                 const response = await fetch(apiEndpoint, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
-                        'Accept': 'application/json' // Still good practice to accept JSON, even if we expect a string sometimes
+                        'Accept': 'application/json' // Indicate we expect JSON back
                     },
+                    // Send the message in the format expected by the Pydantic model: { "message": "..." }
                     body: JSON.stringify({ message: userInput })
                 });
 
+                // Hide typing indicator once we start processing the response or encounter an error
                 hideTypingIndicator();
 
                 if (!response.ok) {
+                    // Handle HTTP errors (e.g., 404, 500, 422 Validation Error)
                     let errorDetail = `HTTP error! Status: ${response.status}`;
                     try {
+                        // Try to get more specific error detail from response body if available (FastAPI often provides JSON errors)
                         const errorData = await response.json();
                         if (errorData && errorData.detail) {
+                            // Handle FastAPI's validation error structure or other detail formats
                            if (Array.isArray(errorData.detail)) {
                                 errorDetail = `Error: ${errorData.detail.map(e => `${e.loc.join('.')} - ${e.msg}`).join(', ')}`;
-                            } else if (typeof errorData.detail === 'string'){
-                                errorDetail = `Error: ${errorData.detail}`; // Handle FastAPI detail string
                             } else {
-                               errorDetail = `Error: ${JSON.stringify(errorData.detail)}`; // Handle other detail types
+                                errorDetail = `Error: ${errorData.detail}`;
                             }
                         } else {
                            errorDetail = await response.text(); // Fallback to plain text error
-                           // If the error response IS the detail string itself (common with HTTPException)
-                           if (!errorDetail.startsWith('Error:')) errorDetail = `Error: ${errorDetail}`;
                         }
                     } catch (e) {
-                         try {
-                             // If parsing as JSON fails, try getting the raw text
-                             errorDetail = await response.text();
-                             if (!errorDetail.startsWith('Error:')) errorDetail = `Error: ${errorDetail}`;
-                         } catch (finalError) {
-                             // If getting text also fails, use statusText
-                             errorDetail = response.statusText || errorDetail;
-                             console.error("Could not parse or read error response body:", e, finalError);
-                         }
+                        // If parsing error response fails, use the status text
+                        errorDetail = response.statusText || errorDetail;
+                        console.error("Could not parse error response body:", e);
                     }
                     console.error('API Error:', response.status, errorDetail);
-                    addMessage(`Sorry, there was an issue communicating with the chatbot. ${errorDetail}`, 'ai');
+                    addMessage(`Sorry, there was an issue communicating with the chatbot. ${errorDetail}`, 'ai'); // Display error to user
                     return;
                 }
 
-                // --- Process the successful response ---
-                // Since the backend returns a plain string, response.json() will parse it into a JS string.
+                // --- Process the successful JSON response ---
                 const data = await response.json();
 
-                // --- MODIFIED HANDLING ---
-                // Check if the data received IS a string (the AI response)
-                if (typeof data === 'string' && data.trim() !== '') {
-                    const aiResponse = data; // The data itself is the response string
+                // IMPORTANT: Expecting the API to return { "response": "AI text..." }
+                if (data && typeof data.response === 'string') {
+                    const aiResponse = data.response;
                     addMessage(aiResponse, 'ai'); // Add the actual AI response
-                }
-                // Optional: Keep a check for structured errors IF your backend might sometimes return them
-                else if (data && typeof data === 'object' && data.error) {
-                    console.error('API returned a structured error:', data.error);
+                } else if (data && data.error) {
+                    // Handle structured errors returned from the backend (e.g., API key missing)
+                    console.error('API returned an error:', data.error);
                     addMessage(`Sorry, the chatbot encountered an issue: ${data.error}`, 'ai');
                 }
-                // Handle cases where the response is not a non-empty string or a known error object
-                else {
-                    console.error('API Response was not the expected string format:', data);
+                 else {
+                    // Handle cases where the 'response' key is missing or not a string
+                    console.error('API Response missing or invalid "response" key:', data);
                     addMessage("Sorry, I received an unexpected response format from the chatbot.", 'ai');
                 }
-                // --- END OF MODIFIED HANDLING ---
 
             } catch (error) {
-                hideTypingIndicator();
+                hideTypingIndicator(); // Ensure indicator is hidden on any error
                 console.error('Fetch Error:', error);
+                // Distinguish network errors from other potential issues
                 let errorMessage = "An unexpected error occurred while trying to send your message. Please try again.";
                 if (error instanceof TypeError && error.message.includes('fetch')) {
                    errorMessage = "Sorry, I couldn't connect to the chatbot service. Please ensure it's running and reachable.";
-                } else if (error instanceof SyntaxError) {
-                    // This might happen if the response is truly not valid JSON (e.g., empty or malformed)
-                    // but response.ok was true, which is unusual.
-                    errorMessage = "Received an invalid response from the chatbot.";
-                    console.error("Response body might not be valid JSON:", error);
                 }
                 addMessage(errorMessage, 'ai');
             }
@@ -821,7 +817,7 @@
 
 
         // --- Event Listeners Setup ---
-        // (Keep the rest of your JavaScript code as it was, including event listeners setup)
+
         document.addEventListener('DOMContentLoaded', function() {
             // Clear any previous messages on load (optional)
             clearMessages();
@@ -849,19 +845,34 @@
             });
 
             // --- Agent Switching Logic (Visual Only) ---
+            // Add click listeners to agent items to visually update the selection
             const agentItems = document.querySelectorAll('.sidebar .agent-item');
             agentItems.forEach(item => {
                 item.addEventListener('click', function(event) {
+                     // Only handle clicks on items that are *not* links meant to navigate away
+                     // or handle links differently if needed (e.g., prevent default and do something first)
                      if (item.closest('a')) {
+                         // If it's a link, let the browser handle navigation
+                         // You could add logic here *before* navigation if needed
                          console.log(`Navigating via link for: ${item.querySelector('.agent-name').textContent}`);
                          return;
                      }
+
+                    // Remove 'selected' class from all items
                     agentItems.forEach(i => i.classList.remove('selected'));
+                    // Add 'selected' class to the clicked item
                     this.classList.add('selected');
-                    // Optional logic here
+
+                    // Optional: Clear chat or add a message when switching context
+                    // if (this.id === 'main-agent') {
+                    //     clearMessages();
+                    //     addMessage("Switched to EduconnectGPT. How can I help?", 'ai');
+                    // }
+                     // Add similar logic for other non-link agents if necessary
                 });
             });
 
+            // Ensure the default agent is marked as selected on load
             const defaultSelectedAgent = document.querySelector('.agent-item.selected');
             if (!defaultSelectedAgent) {
                  const mainAgent = document.getElementById('main-agent');
