--- a/frontend/home.html
+++ b/frontend/home.html
@@ -50,11 +50,11 @@
     </section>
 
     <!-- Search Bar -->
-    <div class="search-container">
+    <!-- <div class="search-container">
         <span class="search-icon-input">🔍</span>
         <input type="text" class="search-bar" placeholder="Search for tutors, courses, or topics...">
         <button class="search-btn">Search</button>
-    </div>
+    </div> -->
 
     <section class="features-section">
         <h2 class="section-title">How EduConnect Works</h2>
